# xname

./: Dockerfile  README.md  docker-compose.yml  index.py  main.py  pyproject.toml
notes/: book.ipynb
src/: bruteforce.py  common.py  local_search.py  opt.py  pulp.py  pulp_search.py  random_search.py  test_random_search.py
