[tool.poetry]
name = "xname"
version = "0.1.0"
description = ""
authors = ["s2terminal"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.2.9"
PuLP = "^2.3.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
